fix: keep tweet light theme in dark mode

--- a/src/styles/twitter.scss
+++ b/src/styles/twitter.scss
@@ -6,4 +6,8 @@
     text-decoration: none !important;
     color: #000 !important;
   }
+  article {
+    margin-bottom: 0 !important;
+    border: none !important;
+  }
 }
